# portfolio

./: ..env.swp  .gitignore  AGENTS.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.agent/: important.md
.agent/rules/: ai-models-huggingface.md  astro.md  cleanup-artifacts.md  cloudflare.md  database-design-agent.md  debugging-agent.md  devops-cicd-agent.md  ei-architect-llm.md  git.md  github-actions.md  huggingface.md  markdown.md  memory.md  mongodb.md  nodejs.md  performance-optimization-agent.md  pipeline-expert.md  postgresql.md  python-data-science-expert.md  redis.md  security-audit-agent.md  session-cleanup-organization.md  simulator-critic.md  skill-finishing-a-development-branch.md  skill-receiving-code-review.md  skill-sharing-skills.md  snyk_rules.md  strong-reasoner-planner-agent.md  testing.md  typescript-type-specialist.md  typescript.md  ui-designer.md
.agent/skills/: pre-tool-hook.sh
.dotenvy/history/: 2026-02.json
.windsurf/: documents.md
.windsurf/rules/: ai-engineer.md  ai-prompt-engineer-agent.md  bash.md  code-migration-agent.md  code-review-agent.md  docker.md  infrastructure.md  karen-repo-reviewer.md  kubernetes.md  memory-bank-instructions.md  playwright.md  python-ai-engine.md  python-ai-ml-development-expert.md  python-automation-and-scripting-expert.md  refactoring-agent.md  rest-api-best-practices.md  security.md  skill-brainstorming.md  skill-condition-based-waiting.md  skill-executing-plans.md  skill-subagent-driven-development.md  (+7 more)
src/: env.d.ts
tests/: test_main.py
util/: requirements.txt
(+43 files in other folders)
