[project]
name = "portfolio"
version = "0.1.0"
description = "AI-powered portfolio and terminal backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.33.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "python-dotenv>=1.2.2",
    "langchain>=1.3.9",
    "instructor>=1.0.0",
    "supabase>=2.0.0",
    "pydantic>=2.10.0",
    "groq>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
